# agi

./: Cargo.toml  README.md  deny.toml
.github/workflows/: codeql.yml  rust.yml  security.yml
crates/cmr-compressor/: Cargo.toml
crates/cmr-core/: Cargo.toml
crates/cmr-core/src/: protocol.rs  router.rs
crates/cmr-core/tests/: core_tests.rs
crates/cmr-peer/: Cargo.toml
crates/cmr-peer/src/: app.rs  config.rs  transport.rs  tui.rs
crates/cmr-peer/tests/: config_transport.rs  docker_smtp.rs
