[package]
name = "cmr-compressor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cmr-core = { path = "../cmr-core" }
infotheory = { git = "https://github.com/turtle261/infotheory", branch = "github", default-features = false, features = ["backend-rosa", "backend-zpaq"] }
serde_json = "1.0.145"
